--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jonathan Tyler - CUNT / Videographer</title>
+<title>Jonathan Tyler - Videographer / Photographer / Editor / Drone Operator</title>
 <meta name="Freelance Videographer, Photographer, Editor and Drone Operator" content="">
 <meta name="Jonathan Tyler" content="">
 
@@ -43,7 +43,7 @@
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
               <h1>Jonathan Tyler</h1>
-              <p>CUNT / Videographer</p>
+              <p>Videographer / Photographer / Editor / Drone Operator</p>
               <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a> <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a> </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
         </div>
         <div class="col-sm-6 col-md-4 shortfilms">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://vimeo.com/412883440" title="Funk Films" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="FUNKS1.2.mp4" title="Funk Films" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
