--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-4 clients">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://vimeo.com/412883740" title="EmpoweredFit" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="https://vimeo.com/412883740" title="EmpoweredFit Online" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
@@ -82,6 +82,110 @@
                 </div>
               </div>
               <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/97506393_690171761818352_467810981796380672_n.png?_nc_cat=104&_nc_sid=b96e70&_nc_oc=AQmGDMIBQ-bIDxTT7EW4j9soC_e5pJxYyDzp7bazn_liJxJpANVYu5tQxp_wdaNGn9o&_nc_ht=scontent.flhr4-1.fna&oh=0c5c2dbe8b74ac1ddde70321bf959e19&oe=5EE1074F" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/203461711" title="The Blame | Waiting For Your Love" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>The Blame | Waiting For Your Love</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/Blame.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/252059934" title="Mr & Mrs Edwards" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Mr & Mrs Edwards</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/Mr&MrsEdwards.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/229198122" title="Mr & Mrs Martin" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Mr & Mrs Martin</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/Mr&MrsMartin.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/172220398" title="Mr & Mrs Tyler" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Mr & Mrs Tyler</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/Mr&MrsTyler.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/233022472" title="The Blame | My Dreams" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>The Blame | My Dreams</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/Mydreams.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/204898979" title="Polar States | Everything" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Polar States | Everything</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/PolarStates.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 shortfilms">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/189159295" title="Where The Devil Says Goodnight" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Where The Devil Says Goodnight</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/WTDSG.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 clients">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://vimeo.com/418092544" title="Sam Logan Fitness" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Sam Logan Fitness</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="thumbnail/WTDSG.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 personal">
@@ -94,7 +198,7 @@
                   </div>
                 </div>
               </div>
-              <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/96690096_2742395729192083_7314183276199936000_n.png?_nc_cat=108&_nc_sid=b96e70&_nc_oc=AQliRzEyqKludqLho1nFTzLMCrcOpomNqaiAKl13DROn0JUvQnZ3AAPnO-jMdxGmgVM&_nc_ht=scontent.flhr4-1.fna&oh=501a57e6ddabf63f7c9f99e0d72051b0&oe=5EE0BB34" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/The Key.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 clients">
@@ -133,7 +237,7 @@
                   </div>
                 </div>
               </div>
-              <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/96382074_932314320551894_7170514129067704320_n.png?_nc_cat=101&_nc_sid=b96e70&_nc_oc=AQl47Y1tYWGqKLGbLgXfUeey8VtREMwfZ8TNRCIhAwL-1V0Ili4QWwKFCYZuvI4Pm9w&_nc_ht=scontent.flhr4-1.fna&oh=54c41018cd48ac2841ea6862c99ac7cb&oe=5EDFBEA3" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/Subtle.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 personal">
@@ -146,7 +250,7 @@
                   </div>
                 </div>
               </div>
-              <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/s2048x2048/96804604_553309645378226_2215472928756072448_n.png?_nc_cat=108&_nc_sid=b96e70&_nc_oc=AQlz4MG5hSWtPB5wcBnS_uJLYPigLNmCQbr0EcScSvE2mcJ1YhKNsjF0SojmRynjMlA&_nc_ht=scontent.flhr4-1.fna&oh=2cf8329289728b4acaddf0d9857e1671&oe=5EE28EE8" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/Camera.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 shortfilms">
@@ -159,12 +263,12 @@
                   </div>
                 </div>
               </div>
-              <img src="https://scontent.flhr4-2.fna.fbcdn.net/v/t1.15752-9/s2048x2048/96642620_540352019990008_2337164367457419264_n.png?_nc_cat=111&_nc_sid=b96e70&_nc_oc=AQkS8cWFwZM6y1-Qfi9vetySx55rwzxLun9gqudGtRL9MGPfOUj_QyPpUum71_wPEWs&_nc_ht=scontent.flhr4-2.fna&oh=4c3687b6a29a64257e93c7fd16513b9f&oe=5EE1593D" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/ATB.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 shortfilms">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="FUNKS1.2.mp4" title="Funk Films" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="videos/FUNKS1.2.mp4" title="Funk Films" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
@@ -185,7 +289,7 @@
                   </div>
                 </div>
               </div>
-              <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/s2048x2048/96799994_533083347362193_2466669786189266944_n.png?_nc_cat=101&_nc_sid=b96e70&_nc_oc=AQkcDIidvIux4o-EQJbrGIt_ibOEExDPq6G6j0HkINYIdVrQ3GjIzJRnrP4u4Nnsa2k&_nc_ht=scontent.flhr4-1.fna&oh=52bd264b4565d0707eb59d628e6ddde6&oe=5EE28B85" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/Joe.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
              <div class="col-sm-6 col-md-4 clients">
@@ -224,13 +328,16 @@
                   </div>
                 </div>
               </div>
-              <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-1181856013.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="thumbnail/Mr&MrsDennis.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+        
+
+
 <!-- Contact Section -->
 <div id="contact">
   <div class="container">
