--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".clients">Client Work</a></li>
+            <li><a href="#" data-filter=".music">Music Videos</a></li>
             <li><a href="#" data-filter=".shortfilms">Short Films</a></li>
-            <li><a href="#" data-filter=".personal">Personal Projects</a></li>
+            <li><a href="#" data-filter=".promotion">Promotional Work</a></li>
+            <li><a href="#" data-filter=".weddings">Weddings</a></li>
+
           </ol>
         </li>
       </ul>
     </div>
     <div class="row">
       <div class="portfolio-items">
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/412883740" title="EmpoweredFit Online" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -84,7 +86,7 @@
               <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/97506393_690171761818352_467810981796380672_n.png?_nc_cat=104&_nc_sid=b96e70&_nc_oc=AQmGDMIBQ-bIDxTT7EW4j9soC_e5pJxYyDzp7bazn_liJxJpANVYu5tQxp_wdaNGn9o&_nc_ht=scontent.flhr4-1.fna&oh=0c5c2dbe8b74ac1ddde70321bf959e19&oe=5EE1074F" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 music">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/203461711" title="The Blame | Waiting For Your Love" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -97,7 +99,7 @@
               <img src="thumbnail/Blame.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 weddings">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/252059934" title="Mr & Mrs Edwards" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -110,7 +112,7 @@
               <img src="thumbnail/Mr&MrsEdwards.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 weddings">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/229198122" title="Mr & Mrs Martin" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -123,7 +125,7 @@
               <img src="thumbnail/Mr&MrsMartin.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 weddings">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/172220398" title="Mr & Mrs Tyler" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -136,7 +138,7 @@
               <img src="thumbnail/Mr&MrsTyler.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 music">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/233022472" title="The Blame | My Dreams" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -149,7 +151,7 @@
               <img src="thumbnail/Mydreams.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 music">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/204898979" title="Polar States | Everything" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -175,7 +177,7 @@
               <img src="thumbnail/WTDSG.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/418092544" title="Sam Logan Fitness" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -185,10 +187,10 @@
                   </div>
                 </div>
               </div>
-              <img src="thumbnail/WTDSG.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
+              <img src="thumbnail/samloganjpg.jpg" poster=""class="img-responsive" alt="Project Title"></img> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 personal">
+        <div class="col-sm-6 col-md-4 shortfilms">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/407230985" title="The Key" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -201,7 +203,7 @@
               <img src="thumbnail/The Key.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/407230402" title="Albion Bakehouse" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -214,7 +216,7 @@
               <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/96669119_1516335178540320_5356999707711242240_n.png?_nc_cat=104&_nc_sid=b96e70&_nc_oc=AQlfkLxqy5nJyB85sbtHasbGltY59uXUT-cdvIeSg1u2gHXf9-QvBgGgKU2BxB0EHHI&_nc_ht=scontent.flhr4-1.fna&oh=c3bb8fd52a32bde4e9256b1d7fced88f&oe=5EE35130" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/403493254" title="EmpoweredFit Logo" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -227,7 +229,7 @@
               <img src="https://scontent.flhr4-2.fna.fbcdn.net/v/t1.15752-9/96397944_701340607296700_8860061861387698176_n.png?_nc_cat=111&_nc_sid=b96e70&_nc_oc=AQm1mBcPpMjlMTkA_6A0y1nBZ5x8CzT8gPmUjdeuS0B0O80yQttDaC39XWrroInC2Ic&_nc_ht=scontent.flhr4-2.fna&oh=7c15cb33bfef8699fbf73b5181fbeddc&oe=5EE0BA3F" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/403500939" title="Subtle Enhancements" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -240,7 +242,7 @@
               <img src="thumbnail/Subtle.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 personal">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/403498889" title="Product Test" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -279,7 +281,7 @@
               <img src="https://scontent.flhr4-2.fna.fbcdn.net/v/t1.15752-9/97004714_265572187897449_855636577185955840_n.png?_nc_cat=109&_nc_sid=b96e70&_nc_oc=AQlc255cRLLTntVsSCHqZxa4DUozq30PP3VLlqB5lQNpwSKFMtnRE_mYouYNzplKBjE&_nc_ht=scontent.flhr4-2.fna&oh=3f806bc5d98d1f0379e26e0356086c97&oe=5EE2FFB2&dl=1" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 clients">
+        <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/403497035" title="Joe Ward's Bootcamp" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -292,7 +294,7 @@
               <img src="thumbnail/Joe.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-             <div class="col-sm-6 col-md-4 clients">
+             <div class="col-sm-6 col-md-4 promotion">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/403495693" title="Hope Place" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -318,7 +320,7 @@
               <img src="https://scontent.flhr4-1.fna.fbcdn.net/v/t1.15752-9/96774636_178582213441273_830489797070946304_n.jpg?_nc_cat=107&_nc_sid=b96e70&_nc_oc=AQmPm-qb1kkjMWdcQ-rmlXFZfLSjOGmpjOeVLxv5j35j1LvypWeJfSkwKjPp_Wcg_Qg&_nc_ht=scontent.flhr4-1.fna&oh=907111e114762dc53763ff76a2d5d2cd&oe=5EE1ACE1" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-           <div class="col-sm-6 col-md-4 clients">
+           <div class="col-sm-6 col-md-4 weddings">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://vimeo.com/333534301" title="Mr & Mrs Dennis" data-lightbox-gallery="gallery1">
               <div class="hover-text">
